# Monte_Carlo_Ray_Tracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/rendered_images/: 2015-08-30-04:32:06.ppm
data/scenes/: complex.xml  cornell_boxes.xml  cornell_bunny.xml  cornell_dragon.xml  cornell_monkey.xml  cornell_multi_light.xml  cornell_standard.xml  oren_nayar_roughness.xml  photon_map_test.xml
doc_images/: 2015-07-15-03:51:01.ppm  2015-08-25-20:39:12.ppm
external_libraries/common_include/: TriangleCube.h  boxOverlap.h  objloader.h  pugixml.h  vboindexer.h
external_libraries/common_include/kdtree++/: kdtree.hpp
external_libraries/common_src/: TriangleCube.cpp  boxOverlap.cpp  objloader.cpp  pugixml.cpp  vboindexer.cpp
include/: Camera.h  Object3D.h  OctTreeAABB.h  PhotonMap.h  Scene.h  testclass.h  utils.h  xmlTraverser.h
src/: Camera.cpp  Object3D.cpp  OctTreeAABB.cpp  PhotonMap.cpp  Scene.cpp  main.cpp  testclass.cpp  utils.cpp  xmlTraverser.cpp
